--- a/requirements-cuda.txt
+++ b/requirements-cuda.txt
@@ -6,5 +6,7 @@ tensorflow-gpu==1.12.0
 plaidml-keras==0.5.0
 scikit-image
 tqdm
+dlib
+visdom
 ffmpeg-python==0.1.17
 git+https://www.github.com/keras-team/keras-contrib.git
